# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: flake8-check.yml  pytest-check.yml
gendiff/: __init__.py  arg_parser.py  diff.py  gendiff.py  input_parser.py
gendiff/formatters/: json_.py  plain.py  stylish.py  value_formatter.py
gendiff/scripts/: gendiff.py
tests/: fixture_parser.py  output_parser.py  test_generate_diff.py  test_get_diff.py  test_jsoned.py  test_plained.py  test_stylish.py  test_stylished.py
tests/fixtures/: nested1.yml  nested_diff1.json  nested_diff2.json  nested_jsoned1.txt  nested_jsoned2.txt  nested_plained2.txt  plain_diff1.json  plain_diff2.json  plain_jsoned1.txt  plain_jsoned2.txt  plain_plained2.txt
